# probabilistic_robotics

lecture_2_recursive_state_estimation/: 递归状态估计.md
lecture_3_gaussian_filter/: readme.md  summary.md
lecture_3_gaussian_filter/code/: CMakeLists.txt  extend_kalman_filter.cpp  kalman_filter.cpp  kalman_filter_example.cpp
